--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "模拟实现 Omni 插件",
   "main": "background.js",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "start": "webpack-dev-server",
     "build": "webpack"
   },
@@ -32,5 +33,9 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpackbar": "^5.0.2"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
