--- a/package.json
+++ b/package.json
@@ -1,41 +1,31 @@
 {
   "name": "chrome-search",
-  "version": "1.0.0",
-  "description": "模拟实现 Omni 插件",
-  "main": "background.js",
+  "displayName": "Chrome search",
+  "version": "0.0.0",
+  "description": "Chrome search",
+  "author": "xc",
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "start": "webpack-dev-server",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Dreamcreative/chrome-search.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Dreamcreative/chrome-search/issues"
-  },
-  "homepage": "https://github.com/Dreamcreative/chrome-search#readme",
-  "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.19.3",
-    "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^8.2.5",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
-    "webpackbar": "^5.0.2"
+    "dev": "plasmo dev",
+    "build": "plasmo build"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "plasmo": "0.56.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@plasmohq/prettier-plugin-sort-imports": "3.5.2",
+    "@types/chrome": "0.0.197",
+    "@types/node": "18.8.3",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "prettier": "2.7.1",
+    "typescript": "4.8.4"
+  },
+  "manifest": {
+    "name": "chrome-search",
+    "host_permissions": [
+      "https://*/*"
+    ]
   }
 }
