--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "plasmo build"
   },
   "dependencies": {
+    "antd": "^4.23.5",
     "plasmo": "0.56.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
