--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "plasmo build"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.5",
     "plasmo": "0.56.0",
     "react": "18.2.0",
@@ -20,11 +21,15 @@
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "lodash-es": "^4.17.21",
     "prettier": "2.7.1",
     "typescript": "4.8.4"
   },
   "manifest": {
     "name": "chrome-search",
+    "permissions": [
+      "tabs"
+    ],
     "host_permissions": [
       "https://*/*"
     ]
