--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "permissions": [
       "tabs"
     ],
+    "action": {
+      "default_popup": "popup.html"
+    },
     "host_permissions": [
       "https://*/*"
     ]
