--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.5",
     "plasmo": "0.56.0",
+    "rc-virtual-list": "^3.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -28,7 +29,8 @@
   "manifest": {
     "name": "chrome-search",
     "permissions": [
-      "tabs"
+      "tabs",
+      "bookmarks"
     ],
     "action": {
       "default_popup": "popup.html"
